# fastapi-mongodb-blog

./: .env.development  .env.development.example  .env.production  .env.production.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .envexample  Dockerfile  blogapp_runner.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/blogapp/: __init__.py  main.py
backend/blogapp/core/: config.py  logging.py  mongodb.py  oauth.py
backend/blogapp/core/database/: extended_document.py  mongodb.py
backend/blogapp/core/graphql_api/: __init__.py  queries.py
backend/blogapp/core/security/: models.py  roles.py  routes.py  schema.py  utilities.py
backend/blogapp/modules/: api_test.py
backend/blogapp/modules/articles/: model.py  models.py  routes.py  utils.py
backend/blogapp/modules/authentication/: model.py
backend/blogapp/modules/comments/: model.py  models.py  routes.py
backend/blogapp/modules/gpt_writer/: chatgpt_settings.yml  models.py  routes.py  writer.py
backend/blogapp/modules/tags/: model.py
backend/blogapp/modules/users/: model.py  models.py  routes.py
backend/blogapp/utils/: avatar.py  create_users.py  document_utils.py  extended_document.py
demo-assets/: screenshots.md
frontend/: .env.development  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  quasar-variables.sass
frontend/src/client/: index.ts
frontend/src/components/: ArticleCard.vue  ArticleEditor.vue  ArticleList.vue  AuthLoginForm.vue  AuthRegisterForm.vue  CommentList.vue  (+7 more)
(+56 files in other folders)
